fix: resolve layout bug caused by duplicate ViewChild reference

--- a/src/app/main-page/hero/hero.component.scss
+++ b/src/app/main-page/hero/hero.component.scss
@@ -14,12 +14,12 @@ section {
   }
 
   @media (max-width: 1080px) {
-    height: clamp(px, 80vh, 1000px);
-    height: clamp(px, 80dvh, 1000px);
+    height: clamp(400px, 80vh, 1000px);
+    height: clamp(400px, 80dvh, 1000px);
   }
 }
 
-.hero-wrapper {
+#hero-wrapper {
   @include dFlex($ai: flex-start, $jc: space-between);
   @include maxWidth1920();
   padding: calc(48px + 3rem) 6rem 0 6rem;
