--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -44,6 +44,7 @@ h1 {
   font-family: "Eczar", serif;
   font-weight: 600;
   line-height: 1.2;
+  // font-size: 4.7rem;
 }
 
 h2 {
@@ -52,9 +53,9 @@ h2 {
   font-size: 4.7rem;
   line-height: 1;
 
-  @media (max-aspect-ratio: 7/6) {
-    font-size: 8rem;
-  }
+  // @media (max-aspect-ratio: 7/6) {
+  //   font-size: 8rem;
+  // }
 }
 
 h3 {
